feat - cloning kafka-connect repo and packaging jar in image

--- a/resources/docker/source/csv/Dockerfile
+++ b/resources/docker/source/csv/Dockerfile
@@ -3,18 +3,29 @@ LABEL authors="andr2ei"
 
 USER root
 
+WORKDIR /opt
+
+RUN echo "installing utils"
+RUN apt-get update
+RUN #apt-get -y install vim
+RUN apt-get -y install maven
+RUN apt-get -y install git
+
+RUN echo "installing kafka-connect"
+RUN git clone https://github.com/andr2ei/kafka-connect.git
+WORKDIR /opt/kafka-connect
+RUN mvn package
+
+WORKDIR /opt
+
 RUN echo "adding actual connect props"
 COPY ./config/connect-standalone.properties /opt/bitnami/kafka/config
 COPY ./config/connector-source-csv.properties /opt/bitnami/kafka/config
 
-RUN echo "adding connectors"
+RUN echo "adding connectors and input dir"
 RUN mkdir /opt/connectors
-COPY kafka-connect-1.0-SNAPSHOT.jar /opt/connectors
+RUN cp /opt/kafka-connect/target/kafka-connect-1.0-SNAPSHOT.jar /opt/connectors
 RUN mkdir -p /opt/input/csv
-
-RUN echo "installing vim"
-RUN apt-get update
-RUN apt-get -y install vim
 
 RUN echo "copy scripts"
 COPY scripts/create-topics.sh /opt
@@ -22,8 +33,6 @@ COPY scripts/run-connect.sh /opt
 COPY scripts/get-users.sh /opt
 
 RUN chmod -R 777 /opt
-
-WORKDIR /opt
 
 ENTRYPOINT [ "/opt/bitnami/scripts/kafka/entrypoint.sh" ]
 CMD [ "/opt/bitnami/scripts/kafka/run.sh" ]
